--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand navbar-light bg-light">
+<nav th:fragment="header" class="navbar navbar-expand navbar-light bg-light">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#">
 			<img src="/images/storeLogo.png" width="30" alt="" class="d-inline-block align-text-top">
