--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -25,9 +25,9 @@
 				<a class="nav-link" href="#">Reportes</a>
 			</li>
 		</ul>
-		<form class="d-flex">
-			<input class="form-control me-2" type="search" placeholder="Buscar"  arial-label="">
-			<button class="btn btn-outline-success" type="submit">Buscar</button>
+		<form th:action="@{/logout}" class="form-inline my-2 my-lg-0">
+			<span class="navbar-text mr-sm-2" style="padding: 0 12px;">Hola, <b>[[${logUser.getNombre_usuario}]]</b></span>
+			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cerrar sesión</button>
 		</form>
 	</div>
 </nav>
