--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Dashboard | Tienda virtual</title>
+<meta charset="ISO-8859-1">
+<title>Algo ha salido mal!</title>
 	
-	 <!-- Bootstrap CSS -->
+	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-	
-	<!-- Main CSS -->
-	<link rel="stylesheet" href="/css/main.css">
-	
 </head>
 <body>
-	<div th:insert="/header.html :: header"> </div>
+	<h1>¡Algo ha salido mal!</h1>
+	<h2>Estamos trabajando en solucionarlo.</h2>
 	
-	<div th:insert="/usuarios.html :: moduloUsuarios"> </div>
-	
+	<a href="/">Ir al inicio</a>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 </html>
