--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
                     </div>
                     
                         <h2 class="title">Iniciar sesión</h2>
-	                    <div th:if="${param.error}" class="alert alert-error">    
+	                    <div th:if="${param.error}" class="alert alert-danger">    
 	                    	Nombre de usuario y contraseña incorrectos.
 	                	</div>
 	                	<div th:if="${param.logout}" class="alert alert-success"> 
