--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -6,23 +6,23 @@
 		</a>
 		
 		<ul class="Header-nav navbar-nav me-auto mb-2 mb-lg-0">
-			<li class="nav-item">
-				<a class="nav-link" href="#">Usuarios</a>
+			<li class="nav-item" role="presentation">
+				<a class="nav-link active" href="#" id="usuarios-tab">Usuarios</a>
 			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">Clientes</a>
+			<li class="nav-item" role="presentation">
+				<a class="nav-link" href="#" id="clientes-tab">Clientes</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">Proveedores</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Ventas</a>
+				<a class="nav-link disabled" href="#">Ventas</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Productos</a>
+				<a class="nav-link disabled" href="#">Productos</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Reportes</a>
+				<a class="nav-link disabled" href="#">Reportes</a>
 			</li>
 		</ul>
 		<form th:action="@{/logout}" class="form-inline my-2 my-lg-0">
