Interfaz grafica del modulo Clientes

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -26,8 +26,8 @@
 			</li>
 		</ul>
 		<form th:action="@{/logout}" class="form-inline my-2 my-lg-0">
-			<span class="navbar-text mr-sm-2" style="padding: 0 12px;">Hola, [[${logUser.getNombre_usuario}]]</span>
-			<button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Cerrar sesión</button>
+			<span class="navbar-text mr-sm-2" style="padding: 0 12px;">Hola, invitado</span>
+			<button class="btn btn-primary my-2 my-sm-0" type="submit">Cerrar sesión</button>
 		</form>
 	</div>
 </nav>
