--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -7,10 +7,10 @@
 		
 		<ul class="Header-nav navbar-nav me-auto mb-2 mb-lg-0">
 			<li class="nav-item" role="presentation">
-				<a class="nav-link active" href="#" id="usuarios-tab">Usuarios</a>
+				<a class="nav-link active" href="/dash" id="usuarios-tab">Usuarios</a>
 			</li>
 			<li class="nav-item" role="presentation">
-				<a class="nav-link" href="#" id="clientes-tab">Clientes</a>
+				<a class="nav-link" href="/dash/clientes" id="clientes-tab">Clientes</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">Proveedores</a>
