--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -26,7 +26,7 @@
 			</li>
 		</ul>
 		<form th:action="@{/logout}" class="form-inline my-2 my-lg-0">
-			<span class="navbar-text mr-sm-2" style="padding: 0 12px;">Hola, [[${username}]]</span>
+			<span class="navbar-text mr-sm-2" style="padding: 0 12px;">Hola, <span>[[${#request.remoteUser}]]</span></span>
 			<button class="btn btn-primary my-2 my-sm-0" type="submit">Cerrar sesión</button>
 		</form>
 	</div>
