--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
 	                    <input type="submit" value="Iniciar sesión" class="btn solid">
 					
                     
-                    <p><a href="/ayuda" target="_blank" class="problem-text">Tengo problemas para iniciar sesión</a></p>
+                    <p class="problem-text" id="helpToastBtn">Tengo problemas para iniciar sesión</p>
                 
                 </form>
             </div>
@@ -66,8 +66,6 @@
             </div>
         </div>
     </div>
-    
-    <script src="/js/login.js"></script>
 
 </body>
 </html>
