--- a/src/main/resources/templates/dash.html
+++ b/src/main/resources/templates/dash.html
@@ -10,6 +10,8 @@
 	
 	<!-- Main CSS -->
 	<link rel="stylesheet" href="/css/main.css">
+	
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
 	<div th:insert="/header.html :: header"> </div>
@@ -22,5 +24,6 @@
 	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 	<!-- <script src="/js/dashboard.js"></script> -->
+	<script src="js/users.js"></script>
 </body>
 </html>
