--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -49,7 +49,7 @@
 	            </div>
 	            
 	            <div class="form-group row">
-	                <label class="col-4 col-form-label">Full name: </label>
+	                <label class="col-4 col-form-label">Cédula: </label>
 	                <div class="col-8">
 	                    <input type="text" th:field="*{cedula_usuario}" class="form-control"
 	                            required minlength="2" maxlength="20" />
