--- a/src/main/resources/templates/modules/clientesModule.html
+++ b/src/main/resources/templates/modules/clientesModule.html
@@ -4,13 +4,13 @@
 		
 			<div class="col">
 			<h1 class="d-inline-block">Clientes</h1>
-			<button type="button" class="d-inline-block btn btn-outline-primary btn-sm me-3" style="margin-left: 20px; margin-top: -12px;">Añadir un cliente</button>
-			<button type="button" class="d-inline-block btn btn-outline-danger btn-sm" style="margin-top: -12px;" disabled>Eliminar seleccionados</button>
+			<button type="button" class="d-inline-block btn btn-outline-primary btn-sm mx-3 mb-3">Añadir un cliente</button>
+			<button type="button" class="d-inline-block btn btn-outline-danger btn-sm mb-3" disabled>Eliminar seleccionados</button>
 			</div>			
 		</div>
 		
 		<div>
-			<table class="table">
+			<table class="table table-hover table-responsive">
 				<caption>Lista de clientes</caption>
 				<thead>
 					<tr class="table-light">
