--- a/src/main/resources/templates/dash.html
+++ b/src/main/resources/templates/dash.html
@@ -19,41 +19,8 @@
 	
 	<div class="container-fluid">
 		<div th:insert="/modules/usuariosModule.html :: moduloUsuarios" id="usuarios"> </div>
-	
 		<div th:insert="/modules/usuariosModule.html :: moduloAgregarUsuarios" id="agregarUsuarios"></div>
-	
-		<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-		  <div class="modal-dialog">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <h5 class="modal-title">¿Estás seguro de eliminar un usuario?</h5>
-		        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-		      </div>
-		      <div class="modal-body">
-		        <p>Estás a punto de eliminar un usuario. Esta acción es irreversible.</p>
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
-		        <button type="button" class="btn btn-danger">Eliminar usuario</button>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-		
-		<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-		  <div id="deleteToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-		    <div class="toast-header">
-		      <strong class="me-auto">Se ha eliminado un usuario</strong>
-		      <small>hace un momento</small>
-		      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-		    </div>
-		    <div class="toast-body">
-		      El usuario se ha eliminado satisfactoriamente.
-		    </div>
-		  </div>
-		</div>
-		
-		
+		<div th:insert="/modules/usuariosModule.html :: moduloModificarUsuarios" id="modificarUsuarios"></div>
 	</div>
 	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
