--- a/src/main/resources/templates/modules/usuariosModule.html
+++ b/src/main/resources/templates/modules/usuariosModule.html
@@ -3,15 +3,15 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="d-inline-block">Usuarios</h1>
-		
-				<button type="button" class="d-inline-block btn btn-outline-primary btn-sm mx-3 mb-3" data-bs-toggle="modal" data-bs-target="#agregarUsuarioModal">Añadir un usuario</button>
-				<button type="button" class="d-inline-block btn btn-outline-danger btn-sm mb-3" disabled>Eliminar seleccionados</button>
-				
+				<button type="button" class="d-inline-block btn btn-outline-primary btn-sm mx-3 mb-3" data-bs-toggle="modal" data-bs-target="#agregarUsuarioModal">Añadir un usuario</button>	
 			</div>
 			
 			<div class="col-3" style="align-self: center">
 				<form class="d-flex">
-			        <input class="form-control form-control-sm me-2" type="search" placeholder="Buscar por cédula" aria-label="Search">
+			        <input class="form-control form-control-sm me-2" list="cedulasList" id="cedulasSearchList" type="search" placeholder="Buscar por cédula" aria-label="Default select">
+			       	<datalist id="cedulasList">
+			        	<option th:each="user: ${listUsers}" th:value="${user.cedula_usuario}">
+			       	</datalist>
 			        <button class="btn btn-outline-primary btn-sm" type="submit">Buscar</button>
 			      </form>
 			</div>
