--- a/src/main/resources/templates/modules/usuariosModule.html
+++ b/src/main/resources/templates/modules/usuariosModule.html
@@ -1,5 +1,5 @@
 <section th:fragment="moduloUsuarios">
-	<div class="container-fluid" style="margin-top: 20px;">
+	<div class="container-fluid mt-4">
 		<div class="row">
 			<div class="col">
 				<h1 class="d-inline-block">Usuarios</h1>
