fix images external sources problem

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
                 	
                     <div class="logo noselect">
                     <a href="./">
-                        <img class="logo-img" src="https://cdn.glitch.com/035904e0-5072-486e-aa88-45d03ef24105%2FstoreLogo.png?v=1632054361351">
+                        <img class="logo-img" src="/images/storeLogo.png">
                     </a>
                     </div>
                     
@@ -61,7 +61,7 @@
                     <p>Descubre la facilidad de administrar tu tienda virtual y disfruta las oportunidades que te esperan en tu tiempo libre</p>
                     <!--<button class="btn transparent" id="sign-up-btn">Unirse</button>-->
 
-                    <img src="https://cdn.glitch.com/035904e0-5072-486e-aa88-45d03ef24105%2Fundraw_web_shopping_re_owap%20(1).svg?v=1632054258803" class="image" alt="">
+                    <img src="/images/shopBanner.svg" class="image" alt="">
                 </div>
             </div>
         </div>
