Modificaciones menores al index y el footer

--- a/src/main/resources/templates/dash.html
+++ b/src/main/resources/templates/dash.html
@@ -25,7 +25,7 @@
 		<div th:insert="/modules/usuariosModule.html :: moduloModificarUsuarios" id="modificarUsuarios"></div>
 	</div>
 	
-	<div class="container">
+	<div class="container fixed-bottom">
 		<div th:insert="/footer.html :: footer"></div>
 	</div>
 	
