--- a/src/main/resources/templates/dash.html
+++ b/src/main/resources/templates/dash.html
@@ -24,6 +24,8 @@
 		<div th:insert="/modules/usuariosModule.html :: moduloModificarUsuarios" id="modificarUsuarios"></div>
 	</div>
 	
+	<!-- <div th:insert="/modules/usuariosModule.html :: notificacionEliminar"></div> -->
+	
 	<div class="container fixed-bottom">
 		<div th:insert="/footer.html :: footer"></div>
 	</div>
