--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -13,7 +13,7 @@
 				<a class="nav-link" href="/dash/clientes" id="clientes-tab">Clientes</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Proveedores</a>
+				<a class="nav-link" href="/dash/proveedores">Proveedores</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link disabled" href="#">Ventas</a>
