--- a/src/main/resources/templates/proveedores.html
+++ b/src/main/resources/templates/proveedores.html
@@ -3,22 +3,25 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Clientes | Tienda virtual</title>
+	<title>Proveedores | Tienda virtual</title>
 
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 	
 	<!-- Main CSS -->
 	<link rel="stylesheet" href="/css/main.css">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
 	<div th:insert="/header.html :: header"> </div>
 	
 	<div class="container-fluid">
-		<div th:insert="/modules/clientesModule.html :: moduloClientes" id="clientes"> </div>
+		<div th:insert="/modules/proveedoresModule.html :: moduloProveedores" id="proveedores"> </div>
+		<div th:insert="/modules/proveedoresModule.html :: moduloAgregarProveedores" id="agregarProveedores"></div>
+		<div th:insert="/modules/proveedoresModule.html :: moduloModificarProveedores" id="modificarProveedores"></div>
 	</div>
 	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-	<script src="../js/clients.js"></script>
+	<script src="../js/providers.js"></script>
 </body>
 </html>
