--- a/src/main/resources/templates/clientes.html
+++ b/src/main/resources/templates/clientes.html
@@ -16,6 +16,12 @@
 	
 	<div class="container-fluid">
 		<div th:insert="/modules/clientesModule.html :: moduloClientes" id="clientes"> </div>
+		<div th:insert="/modules/clientesModule.html :: moduloAgregarClientes"></div>
+		<div th:insert="/modules/clientesModule.html :: moduloModificarClientes"></div>
+	</div>
+	
+	<div class="container fixed-bottom">
+		<div th:insert="/footer.html :: footer"></div>
 	</div>
 	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
