Finalizacion del Sprint 2

--- a/src/main/resources/templates/clientes.html
+++ b/src/main/resources/templates/clientes.html
@@ -10,6 +10,9 @@
 	
 	<!-- Main CSS -->
 	<link rel="stylesheet" href="/css/main.css">
+	
+	<script src="https://kit.fontawesome.com/5a291bbc37.js" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
 	<div th:insert="/header.html :: header"> </div>
