--- a/src/main/resources/templates/modules/clientesModule.html
+++ b/src/main/resources/templates/modules/clientesModule.html
@@ -9,7 +9,7 @@
 			<div class="col-3" style="align-self: center">
 				<form class="d-flex">
 			        <input class="form-control form-control-sm me-2" list="cedulasList" id="cedulasClientesSearchList" name="qC" type="search" placeholder="Buscar por cédula" aria-label="Default select">
-			       	<datalist>
+			       	<datalist id="cedulasClientsList">
 			        	<option th:each="client: ${listClients}" th:value="${client.cedula}">
 			       	</datalist>
 			        <button class="btn btn-outline-primary btn-sm" type="submit">Buscar</button>
@@ -41,8 +41,8 @@
 						<td th:text="${client.email}" style="vertical-align: middle;">Correo</td>
 						<td th:text="${client.direccion}" style="vertical-align: middle;">Direccion</td>
 						<td th:text="${client.telefono}" style="vertical-align: middle;">Telefono</td>
-						<td><button type="button" class="btn btn-outline-success btn-sm">Modificar</button></td>
-						<td><button type="button" class="btn btn-outline-danger btn-sm">Eliminar</button></td>
+						<td><button type="button" class="btn btn-outline-success btn-sm" th:attr="onclick=|editar('${client.id}', '${client.cedula}', '${client.nombre}', '${client.email}', '${client.direccion}', '${client.telefono}')|" data-bs-toggle="modal" data-bs-target="#modificarClienteModal">Modificar</button></td>
+						<td><button type="button" class="btn btn-outline-danger btn-sm" th:attr="onclick=|eliminar('${client.id}')|">Eliminar</button></td>
 					</tr>				
 				</tbody>
 			</table>
@@ -67,7 +67,7 @@
 	      <!-- Modal Body -->
 	      <div class="modal-body">
 	      	 
-	        <form th:action="@{/clientes/guardar}" th:object="${client}" method="post" id="addClientForm" style="max-width: 700px; margin: 0 auto;">
+	        <form th:action="@{/add_client}" th:object="${client}" method="POST" id="addClientForm" style="max-width: 700px; margin: 0 auto;">
 		        <div class="m-3">
 		        <div class="row">
 		            
@@ -130,28 +130,28 @@
 		  <!-- Modal Header -->
 	      <div class="modal-header">
 	      	<i class="fas fa-user me-2"></i>
-	        <h5 class="modal-title" id="modificarUsuarioModalLabel">Modificar un usuario</h5>
+	        <h5 class="modal-title" id="modificarUsuarioModalLabel">Modificar un cliente</h5>
 	        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 	      </div>
 	      
 	      
 	      <!-- Modal Body -->
 	      <div class="modal-body">
-	        <form id="modifyUserForm" style="max-width: 700px; margin: 0 auto;">
+	        <form id="modifyClientForm" style="max-width: 700px; margin: 0 auto;">
 	        	<input type="hidden" id="id" name="id">
 		        <div class="m-3">
 		        <div class="row">		        	
 		            <div class="form-group col">
-		                <label class="col-form-label" for="nombre_usuario">Username: </label>
-		                <input type="text" id="usuario2" name="usuario" class="form-control"
-		                            required minlength="2" maxlength="20"/>
+		                <label class="col-form-label" for="cedula_cliente">Cedula: </label>
+		                <input type="text" id="cedula_cliente" name="cedula" class="form-control"
+		                            required minlength="2" maxlength="20" disabled/>
 		            </div>
 		             
 		            <div class="form-group col">
 		                <div class="mb-3">
-		                	<label class="col-form-label" for="password">Password: </label>
-		                    <input type="password" id="password2" name="password" class="form-control"
-		                            required minlength="6" maxlength="20" disabled placeholder="*******"/>
+		                	<label class="col-form-label" for="nombre_cliente">Nombre: </label>
+		                    <input type="text" id="nombre_cliente" name="nombre" class="form-control"
+		                            required minlength="6" maxlength="20"/>
 		                </div>
 		            </div>
 		         </div>
@@ -159,33 +159,33 @@
 		         <div class="row">
 		         	<div class="form-group col">
 		                <div class="mb-3">
-		                	<label class="col-form-label" for="email_usuario">E-mail: </label>
-		                    <input type="email" id="email_usuario2" name="email_usuario" class="form-control" required/>
+		                	<label class="col-form-label" for="email_cliente">E-mail: </label>
+		                    <input type="email" id="email_cliente" name="email" class="form-control" required/>
 		                </div>
 		            </div>		         
 		         </div>
 		         
 		         <div class="row">
 		            <div class="form-group col">
-		               	<label class="col-form-label" for="nombre_usuario">Nombre completo: </label>
-		                <input type="text" class="form-control" id="nombre_usuario2" name="nombre_usuario"
+		               	<label class="col-form-label" for="nombre_usuario">Dirección: </label>
+		                <input type="text" class="form-control" id="direccion_cliente" name="nombre_usuario"
 		                       required minlength="2" maxlength="32" />
 		            </div>
 		            
 		            <div class="form-group col">
-		                <label class="col-form-label" for="cedula_usuario2">Cédula: </label>
-		                <input type="text" id="cedula_usuario2" class="form-control"
+		                <label class="col-form-label" for="cedula_usuario2">Tel&eacute;fono: </label>
+		                <input type="text" id="telefono_cliente" class="form-control"
 		                            required minlength="2" maxlength="20" />
 		            </div>
 		          </div>
 		        </div>
 		        
-		        <input type="submit" id="submit-modifyForm" class="hidden" style="display: none"/>
+		        <input type="submit" id="submit-modifyClientForm" class="hidden" style="display: none"/>
 	        </form>
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-	        <label for="submit-modifyForm" class="btn btn-primary">Modificar usuario</label>
+	        <label for="submit-modifyClientForm" class="btn btn-primary">Modificar cliente</label>
 	      </div>
 	    </div>
 	</div>
