--- a/src/main/resources/templates/modules/usuariosModule.html
+++ b/src/main/resources/templates/modules/usuariosModule.html
@@ -64,7 +64,7 @@
 	      
 	      <!-- Modal Body -->
 	      <div class="modal-body">
-	        <form th:action="@{/process_register}" th:object="${user}" method="post" id="addUserForm" style="max-width: 700px; margin: 0 auto;">
+	        <form th:action="@{/add_user}" th:object="${user}" method="POST" id="addUserForm" style="max-width: 700px; margin: 0 auto;">
 		        <div class="m-3">
 		        <div class="row">
 		            
@@ -167,7 +167,7 @@
 		            <div class="form-group col">
 		               	<label class="col-form-label" for="nombre_usuario">Nombre completo: </label>
 		                <input type="text" class="form-control" id="nombre_usuario2" name="nombre_usuario"
-		                       required minlength="2" maxlength="32" />
+		                       required minlength="2" maxlength="32" disabled/>
 		            </div>
 		            
 		            <div class="form-group col">
