--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -16,10 +16,10 @@
 				<a class="nav-link" href="/dash/proveedores">Proveedores</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link disabled" href="#">Ventas</a>
+				<a class="nav-link" href="/dash/productos">Productos</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link disabled" href="#">Productos</a>
+				<a class="nav-link disabled" href="#">Ventas</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link disabled" href="#">Reportes</a>
