Añadido el products.js

--- a/src/main/resources/templates/modules/clientesModule.html
+++ b/src/main/resources/templates/modules/clientesModule.html
@@ -142,7 +142,7 @@
 		        <div class="m-3">
 		        <div class="row">		        	
 		            <div class="form-group col">
-		                <label class="col-form-label" for="cedula_cliente">Cedula: </label>
+		                <label class="col-form-label" for="cedula_cliente">C%eacute;dula: </label>
 		                <input type="text" id="cedula_cliente" name="cedula" class="form-control"
 		                            required minlength="2" maxlength="20" disabled/>
 		            </div>
@@ -167,7 +167,7 @@
 		         
 		         <div class="row">
 		            <div class="form-group col">
-		               	<label class="col-form-label" for="nombre_usuario">Dirección: </label>
+		               	<label class="col-form-label" for="nombre_usuario">Direcci&oacute;n: </label>
 		                <input type="text" class="form-control" id="direccion_cliente" name="nombre_usuario"
 		                       required minlength="2" maxlength="32" />
 		            </div>
